membuat section reason

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             </div>
         </div>
     </section>
+
     <section class="section-classes-bg" id="section-classes">
       <div class="container">
         <div class="row">
@@ -69,6 +70,7 @@
         </div>
       </div>
     </section>
+
     <section id="classes-content">
       <div class="container">
         <div class="section-classes row justify-content-center align-items-center">
@@ -116,7 +118,36 @@
                 </form>
               </div>
             </div>
-          </div>  
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="reason" id="reason">
+      <div class="container">
+        <div class="reason-heading d-flex justify-content-center text-center">
+          <h2>Why You Should Join Our Class?</h2>
+        </div>
+        <div class="row mt-5 reason-content d-flex text-center align-items-center justify-content-around">
+          <div class="col-sm-12 col-md-4 col-xl-4">
+            <img class="img-fluid" src="frontend/images/savings@2x.png" alt="">
+            <h4>Cheap</h4>
+            <p>
+              Our class are much cheaper than our competitors.
+              When you join the class, lunch and snack are included
+              so you don’t have to be worry for your tummy.
+            </p>
+          </div>
+          <div class="col-sm-12 col-md-4 col-xl-5">
+            <img class="img-fluid" src="frontend/images/expert-illus@2x.png" alt="">
+            <h4>Experts</h4>
+            <p>
+              You will be trained by the experts on their field.
+              With their experience, they will teach you
+              the knowledge and the competence that
+              the world needs.
+            </p>
+          </div>
         </div>
       </div>
     </section>
