--- a/index.html
+++ b/index.html
@@ -149,8 +149,81 @@
             </p>
           </div>
         </div>
+        <div class="d-flex justify-content-center text-center">
+          <form action="">
+            <button class="btn-reason px-5 py-2 mt-4">
+              Join Now
+            </button>
+          </form>
+        </div>
       </div>
     </section>
+
+    <footer class="footer" id="footer">
+      <hr class="mt-5">
+      <div class="container">
+        <div class="footer-content row d-flex justify-content-around">
+          <div class="col-sm-3 col-md-3 col-xl-3">
+            <ul>
+              <p>Social</p>
+              <li>
+                Instagram
+              </li>
+              <li>
+                Facebook
+              </li>
+              <li>
+                Twitter
+              </li>
+            </ul>
+          </div>
+          <div class="col-sm-3 col-md-3 col-xl-3">
+            <ul>
+              <p>Social</p>
+              <li>
+                Instagram
+              </li>
+              <li>
+                Facebook
+              </li>
+              <li>
+                Twitter
+              </li>
+            </ul>
+          </div>
+          <div class="col-sm-3 col-md-3 col-xl-3">
+            <ul>
+              <p>Social</p>
+              <li>
+                Instagram
+              </li>
+              <li>
+                Facebook
+              </li>
+              <li>
+                Twitter
+              </li>
+            </ul>
+          </div>
+          <div class="col-sm-3 col-md-3 col-xl-3">
+            <ul>
+              <p>Social</p>
+              <li>
+                Instagram
+              </li>
+              <li>
+                Facebook
+              </li>
+              <li>
+                Twitter
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <p class="copyright text-center">Copyright BelajarApaLagi 2020. All Rights Reserved</p>
+    </footer>
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
       <script src="frontend/library/bootstrap/bootstrap-4.5.2-dist/js/bootstrap.js"></script>
