--- a/details.html
+++ b/details.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link
-      rel="stylesheet"
-      href="frontend/library/bootstrap/bootstrap-4.5.2-dist/css/bootstrap.css"
-    />
+    <link rel="stylesheet" href="frontend/library/bootstrap/bootstrap-4.5.2-dist/css/bootstrap.css">
     <link rel="stylesheet" href="frontend/styles/style.css" />
   </head>
   <body>
