--- a/checkout.html
+++ b/checkout.html
@@ -33,7 +33,10 @@
                 class="img-fluid"
               />
             </div>
-            <div class="card text-center checkout-card col-lg-6" style="width: 100%">
+            <div
+              class="card text-center checkout-card col-lg-6"
+              style="width: 100%"
+            >
               <div class="card-body">
                 <h5 class="card-title">Photography Class</h5>
                 <ul class="list-group list-group-horizontal text-center">
@@ -85,7 +88,9 @@
                     </div>
                   </div>
                 </div>
-                <a href="#" class="btn btn-primary btn-block btn-pay">I Have Paid</a>
+                <a href="success.html" class="btn btn-primary btn-block btn-pay"
+                  >I Have Paid</a
+                >
               </div>
             </div>
           </div>
