--- a/details.html
+++ b/details.html
@@ -106,7 +106,7 @@
                 <li class="list-group-item text-right flex-fill">Rp100.000</li>
               </ul>
 
-              <a href="#" class="btn btn-block mt-5 btn-primary"
+              <a href="checkout.html" class="btn btn-block mt-5 btn-primary"
                 >Join This Class</a
               >
             </div>
