--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
         <div class="section-classes row justify-content-center align-items-center">
           <div class="col-sm-12 col-md-4 col-xl-3">
             <div class="card-class text-center d-flex flex-column" 
-            style="background-image: url('frontend/images/art@2x.jpg');
+            style="background-image: url('frontend/images/erik-mclean-9XK7vgoGSgc-unsplash@2x.png');
                     width: 100%;
                     background-position: center;">
               <div class="judul">Photography Class</div>
               <div>
-                <form action="#">
+                <form action="details.html">
                   <button class="btn px-5 btn-join">
                     Join Now
                   </button>
@@ -94,7 +94,7 @@
             style="background-image: url('frontend/images/art@2x.jpg');
                     width: 100%;
                     background-position: center;">
-              <div class="judul">Photography Class</div>
+              <div class="judul">Art Class</div>
               <div>
                 <form action="#">
                   <button class="btn px-5 btn-join">
@@ -106,10 +106,10 @@
           </div>
           <div class="col-sm-12 col-md-4 col-xl-3">
             <div class="card-class text-center d-flex flex-column" 
-            style="background-image: url('frontend/images/art@2x.jpg');
+            style="background-image: url('frontend/images/barista\ class@2x.png');
                     width: 100%;
                     background-position: center;">
-              <div class="judul">Photography Class</div>
+              <div class="judul">Barista Class</div>
               <div>
                 <form action="#">
                   <button class="btn px-5 btn-join">
